--- a/Flask_Project/p1/templates/ACCOUNT INFO.html
+++ b/Flask_Project/p1/templates/ACCOUNT INFO.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-------------------------------------- This is the head of the page---------------------------------------------------->
 
 <head>
-<link href="SIGN UP1.css" rel="stylesheet">
+<link href="AccountCSS.css" rel="stylesheet">
 </link>
 </head>
 
@@ -25,16 +27,19 @@
 
 
 <!-------------------------------------- This is a body of the page---------------------------------------------------->
-<body >
+
+<body class="w3-container">
 
 
 
 <h3 style="text-align:center;">
-<p>SIGN UP</p>
+
+<p>Account Information</p>
 <li>
     <label for="First_Name">First Name:</label>
     <input name="first_name" id="First_Name" type="text" />
-
+</li><br><br>
+<li>
     <label for="Name">Last Name:</label>
     <input name="last_name" id="Last_Name" type="text" /> 
 
@@ -49,11 +54,21 @@
     <input  type="password" />
 </li><br><br>
 <li>
-    <label >Retype password: </label>
-    <input  type="password" />
+    <label >Points earned: </label>
+    <input  type="text" />
 </li><br><br>
-<a href="../Log in Page/LOGGIN PAGE.html" class="button">Sign up</a>
-
+<li>
+    <label >Card Number (Optional): </label>
+    <input  type="text" />
+</li><br><br>
+<li>
+    <label >Phone Number (Optional): </label>
+    <input  type="text" />
+</li><br><br>
+<p>
+<a href="../Log in Page/LOGGIN PAGE.html" ><pre>Log out</pre></a>
+<a href="../Reservation page (Registered)/Register page.html" ><pre>Return</pre></a>
+</p>
 </h3>
 
 
