--- a/Flask_Project/p1/templates/TIME (REGISTER).html
+++ b/Flask_Project/p1/templates/TIME (REGISTER).html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-------------------------------------- This is the head of the page---------------------------------------------------->
 
 <head>
-<link href="REGISTER1.css" rel="stylesheet">
+<link href="TIME1.css" rel="stylesheet">
 </link>
-<link href="REGISTER2.css" rel="stylesheet">
+<link href="TIME2.css" rel="stylesheet">
 </link>
 </head>
 
@@ -27,54 +29,45 @@
 
 
 <!-------------------------------------- This is a body of the page---------------------------------------------------->
-<body >
+<body class="w3-container">
 <h1 style="text-align:center;">
-RESERVATION PAGE
+RESERVATION PAGE (Continue)
 </h1>
 
 <h3 style="text-align:center;">
- <pre style="font-size:35px;text-align:center;">INFORMATION</pre>
+<a href="../Account info/ACCOUNT INFO.html";><pre style="font-size:20px;text-align:right;">Profile</pre></a>
+ <pre style="font-size:35px;">Time slot (opening hours 05:00pm to 11:00pm) </pre>
 
 
 
-<li>
-    <label >Date: </label>
-    <input  type="date" />
-</li><br>
+
+<p><strong>Hour in PM</strong></p>
+
+<select multiple size="2">
 
 
-
-<p><strong>Please select the party size</strong></p>
-
-<select multiple size="4">
-
-          <option>   ...1...   </option>
-          <option>   ...2...   </option>
-          <option>  ...3...   </option>
-          <option>   ...4...   </option>
           <option>   ...5...   </option>
           <option>   ...6...   </option>
           <option>  ...7...   </option>
           <option>   ...8...   </option>
           <option>   ...9...   </option>
           <option>   ...10...   </option>
-          <option>  ...11...   </option>
-          <option>   ...12...   </option>
+   
+</select><br><br>
+
+
+<p><strong>MINUTES</strong></p>
+
+<select multiple size="2">
+
+
+          <option>   ...15...   </option>
+          <option>   ...30...   </option>
+          <option>  ...45...   </option>
+   
 </select><br><br><br><br>
 
 
-
-
-
-
-
-
-<form>
-  <label for="appt-time">Choose a reservation time (opening hours 05:00pm to 11:00pm): </label>
-  <input id="appt-time" type="time" name="appt-time"
-         min="17:00" max="23:00">
-  <span class="validity"></span>
-</form>
 
 
 
