--- a/Flask_Project/p1/templates/LOGGIN_PAGE.html
+++ b/Flask_Project/p1/templates/LOGGIN_PAGE.html
@@ -43,8 +43,8 @@
         <br><br>
         <input type="submit" value="Log in"></a>
 
-        <center><img src="Bun.jpg" ; width="1500" ;>
-            <img src="Pho.jpg" ; width="1500" ;>
+        <center><img src="/static/css/Bun.jpg" ; width="1500" ;>
+            <img src="/static/css/Pho.jpg" ; width="1500" ;>
             </pre>
 
 
