--- a/Flask_Project/p1/templates/CONFIRM_RESERVE_REGISTER.html
+++ b/Flask_Project/p1/templates/CONFIRM_RESERVE_REGISTER.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+    <title>W3.CSS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-------------------------------------- This is the head of the page---------------------------------------------------->
 
 <head>
@@ -10,7 +12,7 @@
 </head>
 <!-------------------------------------- This is a body of the page---------------------------------------------------->
 
-<body>
+<body class="w3-container">
 
     <h1>
         THANK YOU FOR YOUR RESERVATION.<br>
