--- a/Flask_Project/p1/templates/Unregister_Reserve_page.html
+++ b/Flask_Project/p1/templates/Unregister_Reserve_page.html
@@ -67,10 +67,13 @@
                 <option> ...12... </option>
             </select>
             <br><br><br><br>
+           <!------
             <p><b>Choose a reservation time (opening hours 05:00pm to 11:00pm):</p>
             <input id="appt-time" type="time" name="appt-time" min="17:00" max="23:00">
             <br><br>
-            <input type="submit" value="Reserve"></a>
+            ---->
+
+            <a href="{{ url_for('TIMEunregister') }}" class="button">Continue</a>
 
 
             <!-- <input type="submit" value="Continue" style="height:50px; width:100px;text-align: center"/>-->
