--- a/Flask_Project/p1/templates/SIGN_UP.html
+++ b/Flask_Project/p1/templates/SIGN_UP.html
@@ -45,7 +45,7 @@
             <p><b>Confirm Password:</p>
             <input type="text" id="password2" name="pword2"></input>
             <br><br>
-            <input type="submit" value="Sign Up"></a>
+            <a href="{{ url_for('login') }}" class="button">Sign up</a>
 
 
 
