--- a/Flask_Project/p1/templates/Unregister_Reserve_page.html
+++ b/Flask_Project/p1/templates/Unregister_Reserve_page.html
@@ -73,7 +73,7 @@
             <br><br>
             ---->
 
-            <a href="{{ url_for('TIMEunregister') }}" class="button">Continue</a>
+            <input type="submit" value="Continue"></a>
 
 
             <!-- <input type="submit" value="Continue" style="height:50px; width:100px;text-align: center"/>-->
