--- a/Flask_Project/p1/templates/Register_page.html
+++ b/Flask_Project/p1/templates/Register_page.html
@@ -66,8 +66,8 @@
       <!---<p><b>Party Size: </p>
       <input id="appt-time" type="time" name="appt-time" min="17:00" max="23:00"></input>
       --->
-
-      <a href="{{ url_for('TIMEregister') }}" class="button">Continue</a>
+      
+      <input type="submit" value="Log in"></a>
   </h3>
 
 
