--- a/Flask_Project/p1/templates/TIME (REGISTER).html
+++ b/Flask_Project/p1/templates/TIME (REGISTER).html
@@ -38,6 +38,7 @@ RESERVATION PAGE (Continue)
 </h1>
 
 <h3 style="text-align:center;">
+
 <a href="{{ url_for('ACCOUNT') }}";><pre style="font-size:20px;text-align:right;">Profile</pre></a>
  <pre style="font-size:35px;">Time slot (opening hours 05:00pm to 11:00pm) </pre>
 
@@ -45,32 +46,35 @@ RESERVATION PAGE (Continue)
 
 
 <p><strong>Hour in PM</strong></p>
-
-<select multiple size="2">
-
-
-          <option>   ...5...   </option>
-          <option>   ...6...   </option>
-          <option>  ...7...   </option>
-          <option>   ...8...   </option>
-          <option>   ...9...   </option>
-          <option>   ...10...   </option>
-   
-</select><br><br>
+<form action="{{ url_for("TIMEregister")}}" method="post">
+    
+        <select multiple size="2" id="reservationhour" name="rhour">
 
 
-<p><strong>MINUTES</strong></p>
+            <option>   ...5...   </option>
+            <option>   ...6...   </option>
+            <option>  ...7...   </option>
+            <option>   ...8...   </option>
+            <option>   ...9...   </option>
+            <option>   ...10...   </option>
+     
+  </select><br><br>
 
-<select multiple size="2">
+    <p><b>MINUTES </p>
+        <select multiple size="2" id="reservationminutes" name="rminutes">
 
 
-          <option>   ...15...   </option>
-          <option>   ...30...   </option>
-          <option>  ...45...   </option>
-   
-</select><br><br><br><br>
+            <option>   ...15...   </option>
+            <option>   ...30...   </option>
+            <option>  ...45...   </option>
+     
+  </select><br><br><br><br>
 
-
+    <!---<p><b>Party Size: </p>
+    <input id="appt-time" type="time" name="appt-time" min="17:00" max="23:00"></input>
+    --->
+    
+    <input type="submit" value="Log in"></a>
 
 
 
@@ -80,7 +84,7 @@ RESERVATION PAGE (Continue)
 
 
 <!-- <input type="submit" value="Continue" style="height:50px; width:100px;text-align: center"/>-->
-<a href="{{ url_for('confirm1') }}" class="button">Reserve</a>
+
 
 </h3>
 
