--- a/Flask_Project/p1/templates/SIGN_UP_NEW_PASSWORD.html
+++ b/Flask_Project/p1/templates/SIGN_UP_NEW_PASSWORD.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{{ url_for('static',     filename='css/SIGN UP1.css') }}">
 
     </link>
+    
+    
+    <h4 style="text-align:center;"><p>Email Already in Use, Please use a different email.</p></h4>
 </head>
 
 
@@ -33,7 +36,7 @@
 
     <h3 style="text-align:center;">
         <p>SIGN UP</p>
-        <form action="{{ url_for("signup")}}" method="post">
+        <form action="{{ url_for("signup1")}}" method="post">
             <p><b>First Name:</p>
             <input type="text" id="first_name" name="fname" required></input>
             <p><b>Last Name: </p>
