Added Login Pages

--- a/Flask_Project/p1/templates/1st_Page.html
+++ b/Flask_Project/p1/templates/1st_Page.html
@@ -21,9 +21,10 @@
     </h2>
     <h3 style="text-align:center">
         <p style="font-size:170%" ;> PLEASE PICK 1 OPTION BELOW </p>
-        <li><a href="{{ url_for('login') }}">LOG IN</a></li>
-        <li><a href="{{ url_for('signup') }}">SIGN UP</a></li>
-        <li><a href="{{ url_for('unregister') }}">START TO RESREVE (Unregister)</a></li>
+        <li><a href="{{ url_for('unregister') }}">Create Reservation as Guest</a></li>
+        <li><a href="{{ url_for('login') }}">Log into Your Account</a></li>
+        <li><a href="{{ url_for('signup') }}">Sign Up for an Account</a></li>
+        
     </h3>
 </body>
 
