--- a/Flask_Project/p1/templates/Register_page.html
+++ b/Flask_Project/p1/templates/Register_page.html
@@ -45,29 +45,34 @@
     <form action="{{ url_for("register")}}" method="post">
       <p><b>Date:</p>
       <input type="date" id="resdate" name="rdate"></input>
-      <p><b>Party Size: </p>
-      <select multiple size="4" id="size" name="psize">
+      <p><b>Hour:</p>
+      <input id="appt-time" type="time" name="appt-time" min="17:00" max="22:00" step="900" required>
+      <br>
+      <small>The Resturaunt is open from 5pm to 10pm</small>
+      <p><b>Group Size:</p>
+      <select multiple size="2" id="reservationhour" name="rhour">
 
-        <option> ...1... </option>
-        <option> ...2... </option>
-        <option> ...3... </option>
-        <option> ...4... </option>
-        <option> ...5... </option>
-        <option> ...6... </option>
-        <option> ...7... </option>
-        <option> ...8... </option>
-        <option> ...9... </option>
-        <option> ...10... </option>
-        <option> ...11... </option>
-        <option> ...12... </option>
-      </select>
-      <br><br>
+
+        <option>   1   </option>
+        <option>   2   </option>
+        <option>   3   </option>
+        <option>   4   </option>
+        <option>   5   </option>
+        <option>   6   </option>
+        <option>   8   </option>
+        <option>   9   </option>
+        
+          
+   
+      </select><br><br>
+ 
+
 
       <!---<p><b>Party Size: </p>
       <input id="appt-time" type="time" name="appt-time" min="17:00" max="23:00"></input>
       --->
       
-      <input type="submit" value="Log in"></a>
+      <input type="submit" value="Check Availibility"></a>
   </h3>
 
 
