--- a/Flask_Project/p1/templates/LOGGIN_PAGE_EMAIL.html
+++ b/Flask_Project/p1/templates/LOGGIN_PAGE_EMAIL.html
@@ -35,6 +35,8 @@
     <h2>
         <center>Made by Thai Nguyen, Erik, and TraXiMie
     </h2>
+
+    <h3 style="text-align:center;">
     <form action="{{ url_for("login")}}" method="post">
         <p><b>User Name:</p>
         <input type="text" id="username" name="uname" required></input>
@@ -43,9 +45,8 @@
         <br><br>
         <input type="submit" value="Log in"></a>
 
-        <center><img src="/static/css/Bun.jpg" ; width="1500" ;>
-            <img src="/static/css/Pho.jpg" ; width="1500" ;>
-            </pre>
+    </h3>
+        
 
 
 
