--- a/Flask_Project/p1/static/css/AccountCSS.css
+++ b/Flask_Project/p1/static/css/AccountCSS.css
@@ -7,16 +7,16 @@ animation: mymove 3s  infinite;
 }
 @keyframes mymove {
   from { 
-background-color: rgb(254,154,204);
+background-color: rgb(203,255,198);
 }
   to {
-background-color: orange;
+background-color: rgb(249,251,202);
 }
 }
 
 
 
-h3{
+h1{
  
 
   margin-top: -20px;
@@ -25,6 +25,21 @@ h3{
   margin-left: 600px;
 background-color: rgb(254,154,204);
 animation: mymove 5s  infinite;
+
+}
+h3{
+ 
+
+background-color: rgb(254,154,204);
+animation: mymove 5s  infinite;
+
+}
+
+h2{
+ 
+
+background-color: rgb(170,244,202);
+
 
 }
 
