--- a/Flask_Project/p1/templates/LOGGIN_PAGE.html
+++ b/Flask_Project/p1/templates/LOGGIN_PAGE.html
@@ -35,6 +35,7 @@
     <h2>
         <center>Made by Thai Nguyen, Erik, and TraXiMie
     </h2>
+    <h3 style="text-align:center;">
     <form action="{{ url_for("login")}}" method="post">
         <p><b>User Name:</p>
         <input type="text" id="username" name="uname" required></input>
@@ -43,14 +44,15 @@
         <br><br>
         <input type="submit" value="Log in"></a>
     </form>
-    <h3 style="text-align:center">
+
+   
+    
         <li><a href="{{ url_for('unregister') }}">Create Reservation as Guest</a></li>
         <li><a href="{{ url_for('signup') }}">Sign Up for an Account</a></li>
                 
-    </h3>  
-        <center><img src="/static/css/Bun.jpg" ; width="1500" ;>
-            <img src="/static/css/Pho.jpg" ; width="1500" ;>
-            </pre>
+    
+    </h3>
+    
 
 
              
