RE_UPDATE ACCOUNT

--- a/Flask_Project/p1/templates/ACCOUNT INFO.html
+++ b/Flask_Project/p1/templates/ACCOUNT INFO.html
@@ -132,7 +132,7 @@
 
 <h2 style="text-align:center;">
 <a href="{{ url_for('login') }}" ><pre>Log out</pre></a>
-<a href="{{ url_for('register) }}" ><pre>Return</pre></a>
+<a href="{{ url_for('register') }}" ><pre>Return</pre></a>
 </h2>
 
 
