--- a/Flask_Project/p1/templates/Register_page.html
+++ b/Flask_Project/p1/templates/Register_page.html
@@ -50,18 +50,21 @@
       <br>
       <small>The Resturaunt is open from 5pm to 10pm</small>
       <p><b>Group Size:</p>
-      <select multiple size="2" id="reservationhour" name="rhour">
+      <select multiple size="2" id="reservationsize" name="psize">
 
 
-        <option>   1   </option>
-        <option>   2   </option>
-        <option>   3   </option>
-        <option>   4   </option>
-        <option>   5   </option>
-        <option>   6   </option>
-        <option>   8   </option>
-        <option>   9   </option>
-        
+        <option   value="1">1   </option>
+        <option   value="2">2   </option>
+        <option   value="3">3   </option>
+        <option   value="4">4   </option>
+        <option   value="5">5   </option>
+        <option   value="6">6   </option>
+        <option   value="7">7   </option>
+        <option   value="8">8   </option>
+        <option   value="9">9   </option>
+        <option   value="10">10   </option>
+        <option   value="11">11   </option>
+        <option   value="12">12   </option>
           
    
       </select><br><br>
