--- a/Flask_Project/p1/templates/Unregister_Reserve_page.html
+++ b/Flask_Project/p1/templates/Unregister_Reserve_page.html
@@ -50,21 +50,23 @@
             <p><b>Date:</p>
             <input name="date" id="regdate" type="date" />
             <br><br>
+            <p><b>Hour:</p>
+            <input id="appt-time" type="time" name="appt-time" min="17:00" max="22:00" step="900" required>
             <p><b>Party Size:</p>
             <select multiple size="4" , id="partysize" name="size">
 
-                <option> ...1... </option>
-                <option> ...2... </option>
-                <option> ...3... </option>
-                <option> ...4... </option>
-                <option> ...5... </option>
-                <option> ...6... </option>
-                <option> ...7... </option>
-                <option> ...8... </option>
-                <option> ...9... </option>
-                <option> ...10... </option>
-                <option> ...11... </option>
-                <option> ...12... </option>
+                <option   value="1">..1..  </option>
+                <option   value="2">..2..   </option>
+                <option   value="3">..3..   </option>
+                <option   value="4">..4..   </option>
+                <option   value="5">..5..   </option>
+                <option   value="6">..6..  </option>
+                <option   value="7">..7..   </option>
+                <option   value="8">..8..   </option>
+                <option   value="9">..9..   </option>
+                <option   value="10">..10 ..  </option>
+                <option   value="11">..11..   </option>
+                <option   value="12">..12..   </option>
             </select>
             <br><br><br><br>
            <!------
