--- a/Flask_Project/p1/templates/LOGGIN_PAGE.html
+++ b/Flask_Project/p1/templates/LOGGIN_PAGE.html
@@ -37,10 +37,10 @@
     </h2>
     <h3 style="text-align:center;">
     <form action="{{ url_for("login")}}" method="post">
-        <p><b>User Name:</p>
+        <p><b>Email:</p>
         <input type="text" id="username" name="uname" required></input>
         <p><b>Password: </p>
-        <input type="text" id="password" name="pname" required></input>
+        <input type="password" id="password" name="pname" required></input>
         <br><br>
         <input type="submit" value="Log in"></a>
     </form>
