--- a/Flask_Project/p1/templates/SIGN_UP.html
+++ b/Flask_Project/p1/templates/SIGN_UP.html
@@ -41,11 +41,12 @@
             <p><b>Email:</p>
             <input type="email" id="email_adress" name="email" required></input>
             <p><b>Password:</p>
-            <input type="password" id="password1" name="pword1" required></input>
-            <input type="submit" value="Sign Up"></a>
+            <input type="password" id="password1" name="pword1" required></input><br><br>
+            <h2>
+            <input type="submit" value="Sign Up"></form></input><br><br>
+            <a href="{{ url_for('home') }}">Home</a>
 
-
-
+            </h2>
 
 
     </h3>
