--- a/Flask_Project/p1/templates/SIGN_UP_Error_SameEmail.html
+++ b/Flask_Project/p1/templates/SIGN_UP_Error_SameEmail.html
@@ -45,10 +45,11 @@
             <input type="email" id="email_adress" name="email" required></input>
             <p><b>Password:</p>
             <input type="password" id="password1" name="pword1" required></input>
-            <input type="submit" value="Sign Up"></a>
-
-
-
+            <h2>
+                <input type="submit" value="Sign Up"></form></input><br><br>
+                <a href="{{ url_for('home') }}">Home</a>
+    
+                </h2>
 
 
     </h3>
