--- a/Flask_Project/p1/static/css/LOGGIN.css
+++ b/Flask_Project/p1/static/css/LOGGIN.css
@@ -1,8 +1,13 @@
 body {
   
 
-  background-image: url("Pho.jpg");
-  
+  background-image: url("BUN.jpg");
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   
   }
   
