--- a/Flask_Project/p1/static/css/SIGN UP1.css
+++ b/Flask_Project/p1/static/css/SIGN UP1.css
@@ -52,15 +52,9 @@ font-size: 170%
 }
 
 
-.button {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 40px 20px 20px 30px;
-  cursor: pointer;
+h2{
+
+  margin-bottom: 50px;
+
+
 }
