UPDATED_PAGE_THAI

--- a/Flask_Project/p1/templates/LOGGIN_PAGE_EMAIL.html
+++ b/Flask_Project/p1/templates/LOGGIN_PAGE_EMAIL.html
@@ -35,7 +35,10 @@
     <h2>
         <center>Made by Thai Nguyen, Erik, and TraXiMie
     </h2>
-    <h3 style="text-align:center;">
+
+
+    <h3 style="text-align:center;"><br>
+        WRONG EMAIL, Please retry again.
     <form action="{{ url_for("login")}}" method="post">
         <p><b>Email:</p>
         <input type="text" id="username" name="uname" required></input>
