--- a/Flask_Project/p1/templates/SIGN_UP_Error_SameEmail.html
+++ b/Flask_Project/p1/templates/SIGN_UP_Error_SameEmail.html
@@ -41,6 +41,8 @@
             <input type="text" id="first_name" name="fname" required></input>
             <p><b>Last Name: </p>
             <input type="text" id="last_name" name="lname" required></input>
+            <p><b>Phone Number: </p>
+            <input type="tel" id="phone_number" name="pnumber" required></input>
             <p><b>Email:</p>
             <input type="email" id="email_adress" name="email" required></input>
             <p><b>Password:</p>
