--- a/Flask_Project/p1/templates/1st_Page.html
+++ b/Flask_Project/p1/templates/1st_Page.html
@@ -22,7 +22,7 @@
     <h3 style="text-align:center">
         <p style="font-size:170%" ;> PLEASE PICK 1 OPTION BELOW </p>
         <li><a href="{{ url_for('unregister') }}">Create Reservation as Guest</a></li>
-        <li><a href="{{ url_for('login') }}">Log into Your Account</a></li>
+        <li><a href="{{ url_for('login') }}">Create Reservation as a Registered User / Log In</a></li>
         <li><a href="{{ url_for('signup') }}">Sign Up for an Account</a></li>
         
     </h3>
