--- a/Flask_Project/p1/static/css/CONFIRM2.css
+++ b/Flask_Project/p1/static/css/CONFIRM2.css
@@ -1,28 +1,26 @@
 body {
   
 
-background-image: url("RABBIT.PNG");
-animation: mymove 5s  infinite;
-
-}
-@keyframes mymove {
-  from { 
-background-color: orange;
-}
-  to {
-background-color: pink;
-}
-}
-
-
-h1{
- 
-
-  margin-top: 350px;
-  margin-bottom: 400px;
-  margin-right: 400px;
-  margin-left: 400px;
-  font-size: 300%;
-}
-
-
+  background-image: url("RABBIT.PNG");
+  animation: mymove 5s  infinite;
+  
+  }
+  @keyframes mymove {
+    from { 
+  background-color: orange;
+  }
+    to {
+  background-color: pink;
+  }
+  }
+  
+  
+  h1{
+   
+    border-style: dashed;
+    background-color: rgb(192, 255, 241);
+    font-size: 300%;
+  }
+  
+  
+  
