--- a/Flask_Project/p1/templates/Register_page.html
+++ b/Flask_Project/p1/templates/Register_page.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="{{ url_for('static',     filename='css/REGISTER1.css') }}">
 
   </link>
-
   <link rel="stylesheet" href="{{ url_for('static',     filename='css/REGISTER2.css') }}">
 
   </link>
+
 </head>
 
 
@@ -40,17 +40,23 @@
   </h1>
 
   <h3 style="text-align:center;">
+      <a href="{{ url_for('home') }}";><pre style="font-size:20px;text-align:right;">Home</pre></a>
     <a href="{{ url_for('ACCOUNT') }}";><pre style="font-size:20px;text-align:right;">Profile</pre></a>
-    <pre style="font-size:35px;text-align:center;">INFORMATION</pre>
+
+
+
+
+
     <form action="{{ url_for("register")}}" method="post">
-      <p><b>Date:</p>
-      <input type="date" id="resdate" name="rdate"></input>
-      <p><b>Hour:</p>
-      <input id="appt-time" type="time" name="appt-time" min="17:00" max="22:00" step="900" required>
-      <br>
-      <small>The Resturaunt is open from 5pm to 10pm</small>
-      <p><b>Group Size:</p>
-      <select multiple size="2" id="reservationsize" name="psize">
+      <b>Date:<br>
+      <input type="date" id="resdate" min="2021-12-03" max="2041-12-02" name="rdate"></input>
+      <br><br><br><br>TIME:<br>
+(The restaurant is open from 5pm to 11pm)
+      <br><input id="appt-time" type="time" name="appt-time" min="17:00" max="23:00" step="900" required>
+      <br> <br><br><br>
+     
+      Group Size:<br>
+      <select multiple size="6" id="reservationsize" name="psize">
 
 
         <option   value="1">1   </option>
@@ -67,15 +73,12 @@
         <option   value="12">12   </option>
           
    
-      </select><br><br>
+      </select><br><br><br>
  
 
-
-      <!---<p><b>Party Size: </p>
-      <input id="appt-time" type="time" name="appt-time" min="17:00" max="23:00"></input>
-      --->
+  
       
-      <input type="submit" value="Check Availibility"></a>
+      <input type="submit" value="Check Availibility"></a><br><br><br>
   </h3>
 
 
