--- a/Flask_Project/p1/templates/LOGGIN_PAGE_PASSWORD.html
+++ b/Flask_Project/p1/templates/LOGGIN_PAGE_PASSWORD.html
@@ -38,7 +38,7 @@
 
 
     <h3 style="text-align:center;"><br>
-        WRONG password, Please retry again.
+        Incorrect Password, Please Try Again.
     <form action="{{ url_for("login")}}" method="post">
         <p><b>Email:</p>
         <input type="text" id="username" name="uname" required></input>
