--- a/Flask_Project/p1/templates/Confirmation_unregister.html
+++ b/Flask_Project/p1/templates/Confirmation_unregister.html
@@ -38,7 +38,7 @@
         <li>Do you want to sign up:</li>
         <a href="{{ url_for('signup') }}">YES</a>
         <br>
-        <a href="{{ url_for('confirmation_unregister_image') }}" ;>NO
+        <a href="{{ url_for('home') }}" ;>NO
         </a>
 <br><br>
     </h1>
