--- a/Flask_Project/p1/templates/ACCOUNT INFO.html
+++ b/Flask_Project/p1/templates/ACCOUNT INFO.html
@@ -61,7 +61,7 @@
     <label >Points earned: {{ account.points }} </label>
 </li>
 <li>
-    <label >Preferred dinner size: </label>
+    <label >Preferred Payment Method: {{ account.payment}} </label>
 </li>
 
 <li>
