--- a/Flask_Project/p1/templates/SIGN_UP.html
+++ b/Flask_Project/p1/templates/SIGN_UP.html
@@ -42,10 +42,69 @@
             <input type="email" id="email_adress" name="email" required></input>
             <p><b>Password:</p>
             <input type="password" id="password1" name="pword1" required></input><br><br>
-            <h2>
-            <input type="submit" value="Sign Up"></form></input><br><br>
-            <a href="{{ url_for('home') }}">Home</a>
 
+
+
+
+           <br><br> <label>Mailing Address</label>
+<br>
+
+    <label for="Street">Street:</label>
+    <input name="street" id="Street" type="text" />
+<br>
+
+
+    <label for="City">City:</label>
+    <input name="city" id="City" type="text" />
+    <label for="State">State:</label>
+    <input name="state" id="State" type="text" />
+    <label for="Zip">Zip:</label>
+    <input name="zip" id="Zip" type="text" />
+<br>
+
+
+
+
+           <br><br> <label >Billing Address</label><br>
+ <input  type="checkbox" />(check if same as mailing address)
+<br>
+
+    <label for="Street">Street:</label>
+    <input name="street" id="Street" type="text" />
+<br>
+
+
+    <label for="City">City:</label>
+    <input name="city" id="City" type="text" />
+    <label for="State">State:</label>
+    <input name="state" id="State" type="text" />
+    <label for="Zip">Zip:</label>
+    <input name="zip" id="Zip" type="text" />
+<br><br><br>
+
+
+
+  <p>Please select your payment type:</p>
+  <input type="radio"  name="fav_language" >
+  <label >Cash</label><br>
+  <input type="radio"  name="fav_language" >
+  <label >Card</label><br>
+  <input type="radio"  name="fav_language" >
+  <label >Check</label>
+
+
+
+
+
+
+
+
+
+
+
+            <h2>
+            <input type="submit" value="Sign Up"></form></input><br>
+            <a href="{{ url_for('home') }}">Home</a>      
             </h2>
 
 
