almost almost done

--- a/Flask_Project/p1/templates/Confirmation_register.html
+++ b/Flask_Project/p1/templates/Confirmation_register.html
@@ -37,8 +37,9 @@
 <b>
 
     THANK YOU FOR YOUR RESERVATION.<br>
-    CONFIRMATION HAS SENT TO YOUR EMAIL.
-
+    CONFIRMATION HAS SENT TO YOUR EMAIL. <br>
+    You have reserved table(s): {{ input }} <br>
+ <img src="static/css/Floor_Plan.png">
 <!-- <input type="submit" value="Continue" style="height:50px; width:100px;text-align: center"/>-->
 
 
