--- a/Flask_Project/p1/templates/Confirmation_register.html
+++ b/Flask_Project/p1/templates/Confirmation_register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+<title>Restaurant TST</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-------------------------------------- This is the head of the page---------------------------------------------------->
@@ -37,9 +37,8 @@
 <b>
 
     THANK YOU FOR YOUR RESERVATION.<br>
-    CONFIRMATION HAS SENT TO YOUR EMAIL. <br>
-    You have reserved table(s): {{ input }} <br>
- <img src="static/css/Floor_Plan.png">
+    CONFIRMATION HAS SENT TO YOUR EMAIL.
+
 <!-- <input type="submit" value="Continue" style="height:50px; width:100px;text-align: center"/>-->
 
 
