--- a/Flask_Project/p1/templates/SIGN_UP_Error_SameEmail.html
+++ b/Flask_Project/p1/templates/SIGN_UP_Error_SameEmail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+    <title>Restaurant TST</title>
 <!-------------------------------------- This is the head of the page---------------------------------------------------->
 
 <head>
