--- a/Flask_Project/p1/templates/SIGN_UP.html
+++ b/Flask_Project/p1/templates/SIGN_UP.html
@@ -71,28 +71,28 @@
  <input  type="checkbox" />(check if same as mailing address)
 <br>
 
-    <label for="Street">Street:</label>
-    <input name="street" id="Street" type="text" />
+    <label for="BStreet">Street:</label>
+    <input name="Bstreet" id="BStreet" type="text" />
 <br>
 
 
-    <label for="City">City:</label>
-    <input name="city" id="City" type="text" />
-    <label for="State">State:</label>
-    <input name="state" id="State" type="text" />
-    <label for="Zip">Zip:</label>
-    <input name="zip" id="Zip" type="text" />
+    <label for="BCity">City:</label>
+    <input name="Bcity" id="BCity" type="text" />
+    <label for="BState">State:</label>
+    <input name="Bstate" id="BState" type="text" />
+    <label for="BZip">Zip:</label>
+    <input name="Bzip" id="BZip" type="text" />
 <br><br><br>
 
 
 
   <p>Please select your payment type:</p>
-  <input type="radio"  name="fav_language" >
-  <label >Cash</label><br>
-  <input type="radio"  name="fav_language" >
-  <label >Card</label><br>
-  <input type="radio"  name="fav_language" >
-  <label >Check</label>
+  <input type="radio"  name="fav_language" value="Cash" >
+  <label for="Cash">Cash</label><br>
+  <input type="radio"  name="fav_language" value="Card">
+  <label for="Card">Card</label><br>
+  <input type="radio"  name="fav_language" value="Check">
+  <label for="Check">Check</label>
 
 
 
